--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kodepintar/laravel-rajaongkir",
-    "description": "This is my package laravel-rajaongkir",
-    "version": "1.0",
+    "description": "RajaOngkir wrapper for Laravel",
+    "version": "2.0.0",
     "keywords": [
         "kodepintar",
         "laravel",
@@ -19,26 +19,23 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^8.37"
+        "illuminate/config": "^8",
+        "illuminate/support": "^8"
+
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "spatie/laravel-ray": "^1.23",
-        "vimeo/psalm": "^4.8"
+        "pestphp/pest-plugin-laravel": "^1.1"
     },
     "autoload": {
         "psr-4": {
-            "Kodepintar\\LaravelRajaongkir\\": "src",
-            "Kodepintar\\LaravelRajaongkir\\Database\\Factories\\": "database/factories"
+            "Kodepintar\\LaravelRajaOngkir\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Kodepintar\\LaravelRajaongkir\\Tests\\": "tests"
+            "Kodepintar\\LaravelRajaOngkir\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -51,11 +48,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Kodepintar\\LaravelRajaongkir\\LaravelRajaongkirServiceProvider"
-            ],
-            "aliases": {
-                "LaravelRajaongkir": "Kodepintar\\LaravelRajaongkir\\LaravelRajaongkirFacade"
-            }
+                "Kodepintar\\LaravelRajaOngkir\\RajaOngkirServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
