--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kodepintar/laravel-rajaongkir",
     "description": "RajaOngkir wrapper for Laravel",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "keywords": [
         "kodepintar",
         "laravel",
@@ -14,19 +14,23 @@
         {
             "name": "Tio",
             "email": "sangvictim@gmail.com",
-            "role": "Developer"
+            "role": "Maintainer"
+        },
+        {
+            "name": "Akhmad",
+            "email": "axmad386@gmail.com",
+            "role": "Maintainer"
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/config": "^8",
-        "illuminate/support": "^8"
-
+        "php": "^8",
+        "illuminate/config": "^8|^9",
+        "illuminate/support": "^8|^9"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.15",
-        "pestphp/pest": "^1.18",
-        "pestphp/pest-plugin-laravel": "^1.1"
+        "orchestra/testbench": "^6.15|^7",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.2"
     },
     "autoload": {
         "psr-4": {
@@ -48,10 +52,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Kodepintar\\LaravelRajaOngkir\\RajaOngkirServiceProvider"
+                "Kodepintar\\LaravelRajaOngkir\\Provider\\RajaOngkirServiceProvider"
             ]
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
