--- a/.gitattributes
+++ b/.gitattributes
@@ -8,8 +8,12 @@
 /phpunit.xml.dist   export-ignore
 /tests              export-ignore
 /.editorconfig      export-ignore
-/.php_cs.dist       export-ignore
+/.php_cs.dist.php   export-ignore
 /psalm.xml          export-ignore
 /psalm.xml.dist     export-ignore
 /testbench.yaml     export-ignore
 /.chglog            export-ignore
+/CHANGELOG.md       export-ignore
+/README-ID.md       export-ignore
+/README.md          export-ignore
+/configure.php      export-ignore
